docker compose works

--- a/.env.template
+++ b/.env.template
@@ -1,5 +1,8 @@
-PROJECT_DIR="/"
-STORAGE_DIR="/Users/kuanyshbakytuly/Desktop/Relive/storage"
+ENV_NAME=<ENV_NAME>
 
-SERVER_PORT="8003"
-SERVER_HOST="0.0.0.0"
+PROJECT_DIR=<PROJECT_DIR>
+STORAGE_DIR=<STORAGE_DIR>
+
+SERVER_PORT=<SERVER_PORT>
+SERVER_HOST=<SERVER_HOST>
+
